增加播放进度跳转&&解决缓存条加载出错问题

--- a/audio.html
+++ b/audio.html
@@ -23,7 +23,7 @@
         <a href="javascript:void(0)" id="playbtn" class="playbtn pausebtn"></a>
         <a href="javascript:void(0)" id="nextbtn" class="nextbtn"></a>
     </div>
-    <div class="progdiv">
+    <div class="progdiv" id="progdiv">
         <div class="pgbg">
             <div id="pgbuf" class="pgbuf" style="width: 0%;"></div>
             <div id="pgtime" class="pgtime" style="width: 0%;"></div>
@@ -284,8 +284,6 @@
 
         get_song(song_id, open_id);
     }
-
-
 </script>
 </body>
 </html>
